--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* nav a{
+  background-color: aliceblue;
+  padding: 16px 32px;
+}
+nav a.active{
+  text-decoration: none;
+  font-weight:bold;
+} */
